force-app/main/default/objects/NEILON__File_Management_Configuration__c/NEILON__File_Management_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>File management settings such as allow to delete files.</description>
    <label>File Management Configuration</label>
</CustomObject>