force-app/main/default/objects/NEILON__File_Management_Configuration__c/fields/NEILON__Allow_Delete_Latest_Versions__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Allow_Delete_Latest_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, users can delete latest file versions.</description>
    <inlineHelpText>If checked, users can delete latest file versions.</inlineHelpText>
    <label>Allow Delete Latest Versions?</label>
    <type>Checkbox</type>
</CustomField>