force-app/main/default/objects/NEILON__File_Management_Configuration__c/fields/NEILON__Archive_Storage_Class__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Archive_Storage_Class__c</fullName>
    <description>The name of the Glacier Storage Class in which you would like to archive your S3 files. Allowed values are DEEP_ARCHIVE and GLACIER.</description>
    <inlineHelpText>The name of the Glacier Storage Class in which you would like to archive your S3 files. Allowed values are DEEP_ARCHIVE and GLACIER.</inlineHelpText>
    <label>Archive Storage Class</label>
    <type>TextArea</type>
</CustomField>