force-app/main/default/objects/NEILON__File_Management_Configuration__c/fields/NEILON__Delete_Permissions__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Delete_Permissions__c</fullName>
    <description>Users with selected permission will be able to delete files.</description>
    <inlineHelpText>Users with selected permission will be able to delete files.</inlineHelpText>
    <label>Delete Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>