force-app/main/default/objects/NEILON__File_Management_Configuration__c/fields/NEILON__Number_of_Days_for_Recycle_Bin__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Number_of_Days_for_Recycle_Bin__c</fullName>
    <description>S3-Files moved in S3-Link Recycle Bin will be available for recovery for these many days. After these many days S3-Files will be auto deleted from Salesforce and Amazon S3 unless someone recovers them from S3-Link Recycle Bin.</description>
    <inlineHelpText>S3-Files moved in S3-Link Recycle Bin will be available for recovery for these many days. After these many days S3-Files will be auto deleted from Salesforce and Amazon S3 unless someone recovers them from S3-Link Recycle Bin.</inlineHelpText>
    <label>Number of Days for Recycle Bin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>