force-app/main/default/objects/NEILON__File_Management_Configuration__c/fields/NEILON__Soft_Delete__c.field-meta.xml
<CustomField>
    <fullName>NEILON__Soft_Delete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, file won&apos;t be deleted from Amazon server. Only Salesforce File reference will be deleted.</description>
    <inlineHelpText>If checked, file won&apos;t be deleted from Amazon server. Only Salesforce File reference will be deleted.</inlineHelpText>
    <label>Soft Delete</label>
    <type>Checkbox</type>
</CustomField>